feat(commands): implement slash commands

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,9 +10,9 @@
   },
   "parser": "@typescript-eslint/parser",
   "plugins": ["@typescript-eslint", "simple-import-sort", "import"],
-  "rules": {
+  "rules":{
+    "arrow-parens": ["off", "always"],
     "arrow-spacing": ["warn", { "before": true, "after": true }],
-    "brace-style": ["error", "stroustrup", { "allowSingleLine": true }],
     "comma-dangle": ["error", "always-multiline"],
     "comma-spacing": "error",
     "comma-style": "error",
@@ -36,6 +36,7 @@
     "no-multiple-empty-lines": ["error", { "max": 2, "maxEOF": 1, "maxBOF": 0 }],
     "no-shadow": ["error", { "allow": ["err", "resolve", "reject"] }],
     "no-trailing-spaces": ["error"],
+    "no-unused-vars": ["error", { "argsIgnorePattern": "^_$" }],
     "no-var": "error",
     "object-curly-spacing": ["error", "always"],
     "prefer-const": "error",
