--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
   },
   "author": "sylux6",
   "license": "ISC",
+  "installConfig": {
+    "pnp": true
+  },
   "dependencies": {
     "discord.js": "^14.13.0"
   },
   "devDependencies": {
-    "@prisma/client": "^5.5.2",
+    "@prisma/client": "5.5.2",
     "@types/node": "^20.8.9",
     "@typescript-eslint/eslint-plugin": "^6.9.0",
     "@typescript-eslint/parser": "^6.9.0",
@@ -25,7 +28,7 @@
     "husky": "^8.0.3",
     "lint-staged": "^15.0.2",
     "prettier": "3.0.3",
-    "prisma": "^5.5.2",
+    "prisma": "5.5.2",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.2.2"
