--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "discord.js": "^14.13.0"
   },
   "devDependencies": {
-    "@prisma/client": "5.5.2",
+    "@prisma/client": "^5.5.2",
     "@types/node": "^20.8.9",
     "@typescript-eslint/eslint-plugin": "^6.9.0",
     "@typescript-eslint/parser": "^6.9.0",
@@ -27,8 +27,8 @@
     "eslint-plugin-unused-imports": "^3.0.0",
     "husky": "^8.0.3",
     "lint-staged": "^15.0.2",
-    "prettier": "3.0.3",
-    "prisma": "5.5.2",
+    "prettier": "^3.0.3",
+    "prisma": "^5.5.2",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.2.2"
@@ -47,5 +47,6 @@
       "eslint --fix",
       "prettier --write"
     ]
-  }
+  },
+  "packageManager": "yarn@4.0.1"
 }
