--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,6 +11,8 @@
   "parser": "@typescript-eslint/parser",
   "plugins": ["@typescript-eslint", "simple-import-sort", "import", "unused-imports"],
   "rules":{
+    "@typescript-eslint/indent": ["error", 2],
+    "@typescript-eslint/no-shadow": ["error"],
     "arrow-parens": ["off", "always"],
     "arrow-spacing": ["warn", { "before": true, "after": true }],
     "comma-dangle": ["error", "always-multiline"],
@@ -19,7 +21,7 @@
     "curly": ["error", "multi-line", "consistent"],
     "dot-location": ["error", "property"],
     "handle-callback-err": "off",
-    "indent": ["error", 2],
+    "indent": "off",
     "import/first": "error",
     "import/newline-after-import": "error",
     "import/no-duplicates": "error",
@@ -34,7 +36,7 @@
     "no-lonely-if": "error",
     "no-multi-spaces": "error",
     "no-multiple-empty-lines": ["error", { "max": 2, "maxEOF": 1, "maxBOF": 0 }],
-    "no-shadow": ["error", { "allow": ["err", "resolve", "reject"] }],
+    "no-shadow": "off",
     "no-trailing-spaces": ["error"],
     "no-unused-vars": "off",
     "no-var": "error",
