--- a/package.json
+++ b/package.json
@@ -15,19 +15,18 @@
     "lodash": "^4.17.21"
   },
   "devDependencies": {
+    "@biomejs/biome": "1.8.3",
     "@prisma/client": "^5.16.1",
     "@types/lodash": "^4.17.6",
     "@types/node": "^20.14.9",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "discord-api-types": "^0.37.91",
-    "eslint": "^8.57.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "eslint-plugin-unused-imports": "^3.2.0",
     "husky": "^8.0.3",
     "lint-staged": "^15.2.7",
-    "prettier": "^3.3.2",
     "prisma": "^5.16.1",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
@@ -39,14 +38,7 @@
     }
   },
   "lint-staged": {
-    "*.ts": [
-      "eslint --fix",
-      "prettier --write"
-    ],
-    "*.tsx": [
-      "eslint --fix",
-      "prettier --write"
-    ]
+    "*.(ts|tsx)": ["biome --write"]
   },
   "packageManager": "pnpm@9.4.0"
 }
