--- a/package.json
+++ b/package.json
@@ -18,21 +18,21 @@
   },
   "devDependencies": {
     "@biomejs/biome": "1.8.3",
-    "@prisma/client": "^5.16.1",
-    "@types/lodash": "^4.17.6",
-    "@types/node": "^20.14.9",
+    "@prisma/client": "^5.17.0",
+    "@types/lodash": "^4.17.7",
+    "@types/node": "^20.14.11",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
-    "discord-api-types": "^0.37.91",
+    "discord-api-types": "^0.37.92",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "eslint-plugin-unused-imports": "^3.2.0",
     "husky": "^8.0.3",
     "lint-staged": "^15.2.7",
-    "prisma": "^5.16.1",
+    "prisma": "^5.17.0",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.5.2"
+    "typescript": "^5.5.3"
   },
   "husky": {
     "hooks": {
@@ -40,7 +40,9 @@
     }
   },
   "lint-staged": {
-    "*.(ts|tsx)": ["biome --write"]
+    "*.(ts|tsx)": [
+      "biome --write"
+    ]
   },
   "packageManager": "pnpm@9.4.0"
 }
