--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "ts-node-dev --exit-child src/index.ts",
-    "start": "ts-node src/index.ts"
+    "start": "ts-node src/index.ts",
+    "lint": "pnpm exec biome check --write"
   },
   "author": "sylux6",
   "license": "ISC",
@@ -40,9 +41,7 @@
     }
   },
   "lint-staged": {
-    "*.(ts|tsx)": [
-      "biome --write"
-    ]
+    "*.(ts|tsx)": ["biome --write"]
   },
   "packageManager": "pnpm@9.4.0"
 }
