--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -21,20 +21,12 @@ jobs:
       - name: Check out Git repository
         uses: actions/checkout@v4
 
-      - uses: pnpm/action-setup@v4
-        name: Install pnpm
+      - uses: oven-sh/setup-bun@v2
         with:
-          version: 9.4.0
-          run_install: false
-
-      - name: Install Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: 20
-          cache: 'pnpm'
+          bun-version: latest
 
       - name: Install biome
-        run: pnpm add @biomejs/biome
+        run: bun install --no-save @biomejs/biome
 
       - name: Run biome
-        run: pnpm exec biome check
+        run: bunx biome check
